--- a/ShooterlandEditor/ShooterlandEditor/ShooterlandEditor.csproj
+++ b/ShooterlandEditor/ShooterlandEditor/ShooterlandEditor.csproj
@@ -48,7 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Graphics.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="Grid.cs" />
     <Compile Include="ShooterlandEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +69,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -78,6 +80,27 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="TileSelector.cs" />
+    <Compile Include="Utils.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Graphics\tile1.png" />
+    <Content Include="Graphics\tile10.png" />
+    <Content Include="Graphics\tile11.png" />
+    <Content Include="Graphics\tile12.png" />
+    <Content Include="Graphics\tile13.png" />
+    <Content Include="Graphics\tile14.png" />
+    <Content Include="Graphics\tile15.png" />
+    <Content Include="Graphics\tile16.png" />
+    <Content Include="Graphics\tile17.png" />
+    <Content Include="Graphics\tile2.png" />
+    <Content Include="Graphics\tile3.png" />
+    <Content Include="Graphics\tile4.png" />
+    <Content Include="Graphics\tile5.png" />
+    <Content Include="Graphics\tile6.png" />
+    <Content Include="Graphics\tile7.png" />
+    <Content Include="Graphics\tile8.png" />
+    <Content Include="Graphics\tile9.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
